# client

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: cmake.yml
conan/: conan.cmake  conanfile.txt
platform/: msvc.cmake
resources/: CMakeLists.txt
src/: CMakeLists.txt  Startup.cpp  Startup.hpp
src/App/: App.cpp  App.hpp  CMakeLists.txt  MainWindow.cpp  MainWindow.hpp
src/App/Console/: CMakeLists.txt  ConsoleWindow.cpp  ConsoleWindow.hpp
src/App/Display/: CMakeLists.txt  DisplayWindow.cpp  DisplayWindow.hpp
src/App/Display/OSD/: CMakeLists.txt  DepthIndicator.cpp  Indicators.hpp  PitchIndicator.cpp  RollIndicator.cpp  YawIndicator.cpp
src/App/Network/: CMakeLists.txt  NetworkWindow.cpp  NetworkWindow.hpp
src/App/Settings/: CMakeLists.txt  SettingsWindow.cpp  SettingsWindow.hpp
src/App/Settings/Camera/: CMakeLists.txt  CameraSettingsWidget.cpp  CameraSettingsWidget.hpp
src/App/Settings/CameraSettings/: CMakeLists.txt  CameraSettingsWidget.cpp  CameraSettingsWidget.hpp  IPFunction.hpp
src/App/Settings/Control/: CMakeLists.txt  ControlSettingsWidget.cpp  ControlSettingsWidget.hpp
src/App/Settings/ControlSettings/: CMakeLists.txt  ControlSettingsWidget.cpp  ControlSettingsWidget.hpp
src/App/Settings/Movement/: CMakeLists.txt  MovementSettingsMessage.proto  MovementSettingsWidget.cpp  MovementSettingsWidget.hpp
src/App/Settings/MovementSettings/: CMakeLists.txt  MovementSettingsWidget.cpp  MovementSettingsWidget.hpp
src/App/Settings/NetworkSettings/: CMakeLists.txt  NetworkSettingsWidget.cpp  NetworkSettingsWidget.hpp
src/Legacy/OldApp/: CMakeLists.txt  MainWindow.hpp
src/Legacy/OldApp/Widgets/: widgets.hpp
src/Legacy/OldApp/Widgets/Authorization/: AuthorizationWidget.cpp  AuthorizationWidget.hpp
src/Legacy/OldApp/Widgets/CameraSettings/: CameraSettingsWidget.hpp
src/Legacy/OldApp/Widgets/Display/: DisplayWidget.hpp
src/Legacy/OldApp/Widgets/Input/: Gamepad.hpp  GamepadSettingsWidget.hpp
src/Legacy/OldApp/Widgets/MoveSettings/: MoveSettingsWidget.hpp
src/Legacy/OldApp/Widgets/PythonEnvironment/: PythonEnvironmentWidget.hpp
src/Legacy/OldApp/Widgets/Sensors/: SensorsWidget.hpp
src/Legacy/OldApp/Widgets/SensorsSettings/: SensorsSettingsWidget.hpp
src/Legacy/OldLib/: Lib.hpp
src/Lib/: CMakeLists.txt  Lib.cpp  Lib.hpp
src/Lib/Exceptions/: ExitException.hpp
src/Lib/Gamepad/: CMakeLists.txt  Gamepad.cpp
src/Lib/Gamepad/API/: Commands.hpp  CommandsStruct.hpp  Gamepad.hpp  GamepadSettingsStruct.hpp  Settings.hpp
src/Lib/Logger/: Logger.hpp
src/Lib/Network/: CMakeLists.txt  Compressor.hpp  Network.cpp  Network.hpp  Protocol.cpp
src/Lib/Network/API/: Packet.hpp  Protocol.hpp
src/Lib/Renderer/: BaseWindow.cpp  CMakeLists.txt  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp
src/Lib/Renderer/API/: BaseWindow.hpp  IWidget.hpp  IWindow.hpp  imgui_impl_opengl3_loader.hpp
src/Lib/Sensors/: SensorsData.hpp
src/Renderer/: BaseWindow.cpp  CMakeLists.txt  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp
src/Renderer/API/: BaseWindow.h  IWidget.hpp  IWindow.hpp  imgui_impl_glfw.h
src/Resources/: CMakeLists.txt
