project(Settings)

add_subdirectory(ControlSettings)
add_subdirectory(MovementSettings)
add_subdirectory(CameraSettings)
add_subdirectory(NetworkSettings)

add_library(Settings SettingsWindow.hpp SettingsWindow.cpp)

target_link_libraries(Settings ControlSettings)
target_link_libraries(Settings MovementSettings)
target_link_libraries(Settings CameraSettings)
target_link_libraries(Settings NetworkSettings)
